[package]
name = "frontendr"
version = "0.1.0"
authors = ["xleyba <xleyba@users.noreply.github.com>"]
edition = "2018"
publish = false

[dependencies]
actix-web = { version="1.0.0-beta.3" }
actix = "0.8.1"
serde = "1.0.90"
serde_derive = "1.0.90"
log = "0.4.6"
envy = "0.4.0"
env_logger = "0.6.1"
colored = "1.7"
futures = "0.1.26"